# hermes

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dd  hermes_bot.py  launch.sh  prompt.md  prompt1.md  pyproject.toml
cli/: display.py  main.py  pacman_filter.py  text_content.py
cli/commands/: __init__.py  agent_sync.py  discord.py  doctor.py  hcs.py  hcs10.py  info.py  liquidity.py  nfts.py  orders.py  patch.py  robot.py  staking.py  (+3 more)
data/: README.md  aliases.json  base_tokens.json  btc_history_1d.json  governance.json  pacman_data_raw.json  pools_v2.json  settings.json  tokens.json  variants.json
lib/: dc_format.py  multicall.py  patch_reporter.py  prices.py  saucerswap.py  staking.py  tg_format.py  tg_router.py  training_monitor.py  transfers.py  v1_saucerswap.py  v2_liquidity.py
logs/: agent_interactions.jsonl
openclaw/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SETUP.md  SOUL.md  TOOLS.md
scripts/: approve_hts_token.js  associate_hts_token.js  harvest_knowledge.py  openclaw_setup.py  refresh_data.py
src/: agent_log.py  associations.py  balances.py  config.py  controller.py  discovery.py  errors.py  executor.py  history.py  kms_provider.py  limit_orders.py  logger.py  router.py  translator.py  utils.py
tests/: live_test_limit_order.py  massive_test_suite.py  test_approve.py  test_bitcoin_converter_logic.py  test_config.py  test_limit_orders.py  test_secure_config.py  test_translator.py  test_utils.py  verify_all.py  verify_core_tools.py  verify_strict_logic.py
training_data/: instruction_pairs.jsonl
website/: index.html
(+35 files in other folders)
