[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cli"
version = "1.0.0-beta"
description = "AI-native self-custody middleware for Hedera Hashgraph"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "raunet234" }
]
dependencies = [
    "web3>=6.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "cryptography>=41.0.0",
    "hiero-sdk-python>=0.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "matplotlib>=3.10.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "discord.py>=2.3.0",
    "cairosvg>=2.9.0",
    "python-telegram-bot>=22.7",
    "google-generativeai>=0.8.6",
    "google-genai>=2.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
hermes = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*", "lib*", "data*"]

# ---------------------------------------------------------------------------
# uv Configuration (zero-dependency launcher)
# ---------------------------------------------------------------------------
[tool.uv]
managed = true
